{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 24,
  "lineage": "b8256896-1bbc-7032-1e3f-366fb0d89387",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-083a11431776e871f",
            "domain": "vpc",
            "id": "eipalloc-0ef174a9cd25bb708",
            "instance": "i-003665f5a14208f77",
            "network_interface": "eni-0c3b82abccc2d8eec",
            "private_dns": "ip-10-0-1-184.ec2.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-52-44-111-179.compute-1.amazonaws.com",
            "public_ip": "52.44.111.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08f46489278748946",
            "domain": "vpc",
            "id": "eipalloc-06654ae414671389a",
            "instance": "i-0673bad1c65d10815",
            "network_interface": "eni-0ab5f6853d27048db",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-3-233-66-188.compute-1.amazonaws.com",
            "public_ip": "3.233.66.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:336458496005:instance/i-0b7100b0a310021f1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7100b0a310021f1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ankitsoni",
            "monitoring": false,
            "primary_network_interface_id": "eni-085d28bd45db25e6d",
            "private_dns": "ip-10-0-2-232.ec2.internal",
            "private_ip": "10.0.2.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a0143e16acad044b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073a2e3deb8933ec8",
            "tags": {
              "Name": "ankit-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058de3d3894f5e1cb"
            ]
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9d4a05375b2763",
            "arn": "arn:aws:ec2:us-east-1:336458496005:instance/i-003665f5a14208f77",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003665f5a14208f77",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ankitsoni",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3b82abccc2d8eec",
            "private_dns": "ip-10-0-1-184.ec2.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-54-166-215-50.compute-1.amazonaws.com",
            "public_ip": "54.166.215.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0dbeb3bc0cf4581d0",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06588313d28d05879",
            "tags": {
              "Name": "ankit-nat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0618593e5cf62f9fb"
            ]
          },
          "dependencies": [
            "aws_security_group.nat",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:336458496005:instance/i-0673bad1c65d10815",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0673bad1c65d10815",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ankitsoni",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab5f6853d27048db",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-54-174-206-229.compute-1.amazonaws.com",
            "public_ip": "54.174.206.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bda2254afe9c5dfe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06588313d28d05879",
            "tags": {
              "Name": "ankit-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b9c8d8fa898fa1a2"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0818cef7662d023ec",
            "owner_id": "336458496005",
            "tags": {
              "Name": "Terrfaorm gateway"
            },
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c91ca6ba2dda2b5a",
            "owner_id": "336458496005",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-003665f5a14208f77",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0c3b82abccc2d8eec",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private subnet route"
            },
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a5cf7c6ca0486ac7",
            "owner_id": "336458496005",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0818cef7662d023ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnet route"
            },
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ca98b1d5208cb9d",
            "route_table_id": "rtb-0c91ca6ba2dda2b5a",
            "subnet_id": "subnet-073a2e3deb8933ec8"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.private-subnet",
            "aws_security_group.nat",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a7e2902f94fbe97",
            "route_table_id": "rtb-0a5cf7c6ca0486ac7",
            "subnet_id": "subnet-06588313d28d05879"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336458496005:security-group/sg-058de3d3894f5e1cb",
            "description": "db security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-058de3d3894f5e1cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9c8d8fa898fa1a2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "vpc_db",
            "name_prefix": null,
            "owner_id": "336458496005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBServer security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336458496005:security-group/sg-0618593e5cf62f9fb",
            "description": "NAT security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0618593e5cf62f9fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "336458496005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NATSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336458496005:security-group/sg-0b9c8d8fa898fa1a2",
            "description": "web security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0b9c8d8fa898fa1a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": null,
            "owner_id": "336458496005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336458496005:subnet/subnet-073a2e3deb8933ec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-073a2e3deb8933ec8",
            "map_public_ip_on_launch": false,
            "owner_id": "336458496005",
            "tags": {
              "Name": "Terraform Private Subnet"
            },
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336458496005:subnet/subnet-06588313d28d05879",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06588313d28d05879",
            "map_public_ip_on_launch": false,
            "owner_id": "336458496005",
            "tags": {
              "Name": "Terraform Public Subnet"
            },
            "vpc_id": "vpc-010ab54f3aec1289a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336458496005:vpc/vpc-010ab54f3aec1289a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de9cb6c3461f1824",
            "default_route_table_id": "rtb-06a132b5e3c42d597",
            "default_security_group_id": "sg-09cd9d08e867d48e6",
            "dhcp_options_id": "dopt-5c4d8927",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-010ab54f3aec1289a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06a132b5e3c42d597",
            "owner_id": "336458496005",
            "tags": {
              "Name": "Terraform-aws-VPC"
            }
          }
        }
      ]
    }
  ]
}